# quark-rs

./: .editorconfig  .gitignore  .markdownlint.json  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
crates/quark/: Cargo.toml
crates/quark-auth-proto/: Cargo.toml
crates/quark-auth-proto/proto/: auth.proto
crates/quark-auth-proto/proto/common/: identities.proto
crates/quark-auth-proto/src/: lib.rs
crates/quark-auth-rs/: Cargo.toml  README.md
crates/quark-auth-rs/src/: error.rs  lib.rs
crates/quark-auth-rs/src/services/: admin.rs  auth.rs  identity.rs  mfa.rs  mod.rs  oauth_server.rs  organization.rs  passkey.rs  policy.rs  project.rs  role.rs  sso.rs  user.rs  workspace.rs
crates/quark-node-proto/: Cargo.toml  build.rs
crates/quark-node-proto/proto/: node.proto
crates/quark-node-proto/src/: lib.rs
crates/quark-node-rs/: Cargo.toml  README.md
crates/quark-node-rs/src/: error.rs  lib.rs
crates/quark-node-rs/src/services/: mod.rs  node.rs
crates/quark-rs/: Cargo.toml
crates/quark-rs/src/: lib.rs
crates/quark-server-proto/: Cargo.toml
crates/quark-server-proto/proto/: auth.proto  controlplane.proto  nodes.proto  release.proto  secrets.proto  server.proto  workflow.proto
crates/quark-server-proto/proto/common/: errors.proto  paging.proto
crates/quark-server-proto/src/: lib.rs
crates/quark-server-rs/: Cargo.toml  README.md
crates/quark-server-rs/src/: error.rs  lib.rs
crates/quark-server-rs/src/services/: control_plane.rs  mod.rs  organization.rs  project.rs  server.rs  workspace.rs
crates/quark-workflow-proto/: Cargo.toml  build.rs
crates/quark-workflow-proto/protos/google/protobuf/: field_mask.proto
crates/quark-workflow-proto/protos/temporal/api/sdk/v1/: service.proto
crates/quark-workflow-proto/src/: lib.rs
crates/quark-workflow-proto/tests/: generated_types.rs
crates/quark-workflow-rs/: AGENTS.md  Cargo.toml  README.md
crates/quark-workflow-rs/src/: builder.rs  client.rs  connection.rs  converter.rs  definitions.rs  errors.rs  handle.rs  interceptors.rs  lib.rs  namespace.rs  options.rs  workflow_trait.rs
crates/quark/src/: lib.rs
examples/auth-example/: Cargo.toml
examples/auth-example/src/: main.rs
examples/node-example/: Cargo.toml
examples/node-example/src/: main.rs
examples/server-example/: Cargo.toml
examples/server-example/src/: main.rs
examples/unified-example/: Cargo.toml
examples/unified-example/src/: main.rs
examples/workflow-example/: Cargo.toml
examples/workflow-example/src/: main.rs
