[package]
name = "quark-auth-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Generated tonic/prost gRPC types for quark-auth-proto"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
