[package]
name = "quark-node-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Generated tonic/prost gRPC types for quark-node-proto"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
