[package]
name = "quark-server-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Generated tonic/prost gRPC types for quark-server-proto"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
