[package]
name = "quark"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified Rust client SDK for the Quark platform"

[lib]
name = "quark"
path = "src/lib.rs"

[dependencies]
quark-auth-rs = { path = "../quark-auth-rs" }
quark-server-rs = { path = "../quark-server-rs" }
quark-server-proto = { path = "../quark-server-proto" }
quark-node-rs = { path = "../quark-node-rs" }
quark-workflow-rs = { path = "../quark-workflow-rs" }
tonic = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
